Avoid early truncation

--- a/app/assets/stylesheets/layout/_work_package_mobile.sass
+++ b/app/assets/stylesheets/layout/_work_package_mobile.sass
@@ -182,7 +182,7 @@
           overflow: hidden
 
           span
-            display: block
+            display: inline-block
 
           a span span
             overflow: hidden
